dep/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirdc-authorizater-api
spec:
  selector:
    matchLabels:
      run: mirdc-authorizater-api
  replicas: 1
  template:
    metadata:
      labels:
        run: mirdc-authorizater-api
    spec:
      containers:
      - name: mirdc-authorizater-api
        image: yogageek/mirdc-authorizater-api:latest
        resources:
          requests:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 128M
          limits:
            cpu: 400m
            memory: 512M
            ephemeral-storage: 256M
        ports:
        - containerPort: 8080
          name: http
